--- a/package.json
+++ b/package.json
@@ -6,33 +6,68 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "test-debug": "ng test --watch --code-coverage false --browsers Chrome",
+    "lint": "concurrently --kill-others-on-fail \"ng lint\" \"npm run lint:scss\" \"npm run lint:prettier\"",
+    "lint:eslint": "ng lint",
+    "lint:prettier": "prettier --check \"./**/*.{js,json,md,ts,html,scss}\"",
+    "lint:scss": "stylelint \"src/**/*.scss\"",
+    "fix:prettier": "prettier --write \"./**/*.{js,json,md,ts,html,scss}\"",
+    "prepare": "husky"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.1.0",
+    "@angular/cdk": "^17.1.2",
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
     "@angular/forms": "^17.1.0",
+    "@angular/material": "^17.1.2",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@ngrx/store": "^17.1.0",
+    "@polygon.io/client-js": "^7.3.2",
+    "lightweight-charts": "^4.1.3",
+    "moment": "^2.30.1",
+    "ngrx-store-localstorage": "^16.1.0",
+    "ngx-timeago": "^3.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.1.1",
+    "@angular-eslint/builder": "17.2.1",
+    "@angular-eslint/eslint-plugin": "17.2.1",
+    "@angular-eslint/eslint-plugin-template": "17.2.1",
+    "@angular-eslint/schematics": "17.2.1",
+    "@angular-eslint/template-parser": "17.2.1",
     "@angular/cli": "^17.1.1",
     "@angular/compiler-cli": "^17.1.0",
+    "@ngrx/eslint-plugin": "^17.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/websocket": "^1.0.10",
+    "@typescript-eslint/eslint-plugin": "6.19.0",
+    "@typescript-eslint/parser": "6.19.0",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.56.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "husky": "^9.0.10",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "stylelint": "^16.2.1",
+    "stylelint-config-recommended-scss": "^14.0.0",
+    "stylelint-scss": "^6.1.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.3.2"
   }
 }
