--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@typescript-eslint/parser": "6.19.0",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "husky": "^9.0.10",
     "jasmine-core": "~5.1.0",
