--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@ngrx/effects": "^17.1.0",
     "@ngrx/store": "^17.1.0",
     "@polygon.io/client-js": "^7.3.2",
     "lightweight-charts": "^4.1.3",
