--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:prettier": "prettier --check \"./**/*.{js,json,md,ts,html,scss}\"",
     "lint:scss": "stylelint \"src/**/*.scss\"",
     "fix:prettier": "prettier --write \"./**/*.{js,json,md,ts,html,scss}\"",
-    "prepare": "husky"
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
