--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@ngrx/effects": "^17.1.0",
+    "@ngrx/router-store": "^17.1.0",
     "@ngrx/store": "^17.1.0",
     "@polygon.io/client-js": "^7.3.2",
     "lightweight-charts": "^4.1.3",
@@ -48,6 +49,7 @@
     "@angular/cli": "^17.1.1",
     "@angular/compiler-cli": "^17.1.0",
     "@ngrx/eslint-plugin": "^17.1.0",
+    "@ngrx/store-devtools": "^17.1.0",
     "@types/jasmine": "~5.1.0",
     "@types/websocket": "^1.0.10",
     "@typescript-eslint/eslint-plugin": "6.19.0",
