--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "lint:eslint": "ng lint",
     "lint:prettier": "prettier --check \"./**/*.{js,json,md,ts,html,scss}\"",
     "lint:scss": "stylelint \"src/**/*.scss\"",
-    "fix:prettier": "prettier --write \"./**/*.{js,json,md,ts,html,scss}\"",
-    "prepare": "husky"
+    "fix:prettier": "prettier --write \"./**/*.{js,json,md,ts,html,scss}\""
   },
   "private": true,
   "dependencies": {
@@ -59,7 +58,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
-    "husky": "^9.0.10",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
