--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.30.1",
     "ngrx-store-localstorage": "^16.1.0",
     "ngx-timeago": "^3.0.0",
+    "primeng": "^17.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
