feat: add specs skeletons ready for details

--- a/angular.json
+++ b/angular.json
@@ -99,6 +99,7 @@
             ],
             "scripts": [],
             "watch": false,
+            "codeCoverage": true,
             "browsers": "ChromeHeadless"
           }
         },
