--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@ngrx/eslint-plugin": "^17.1.0",
     "@ngrx/store-devtools": "^17.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/websocket": "^1.0.10",
     "@typescript-eslint/eslint-plugin": "6.19.0",
     "@typescript-eslint/parser": "6.19.0",
@@ -68,6 +69,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^15.2.2",
+    "lodash-es": "^4.17.21",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "stylelint": "^16.2.1",
