--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,18 +49,18 @@ jobs:
         run: npm run lint:scss
         shell: bash
 
-  #test:
-  #  runs-on: ubuntu-latest
-  #  needs:
-  #    - build
-  #    - lint
-  #  steps:
-  #    - uses: actions/checkout@v4
-  #    - uses: ./.github/actions/setup
+  test:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+      - lint
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup
 
-  #    - name: Unit Tests
-  #      run: npm run test
-  #      shell: bash
+      - name: Unit Tests
+        run: npm run test
+        shell: bash
 
   e2e-test:
     runs-on: ubuntu-latest
