chore: update ci pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,7 +81,7 @@ jobs:
     needs:
       - build
       - lint
-      # - test
+      - test
       - e2e-test
     steps:
       - uses: actions/checkout@v4
